--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "@radix-ui/themes": "^3.0.2",
     "classnames": "^2.3.2",
     "next": "14.1.4",
     "prisma": "^5.12.1",
