--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/themes": "^3.0.2",
     "axios": "^1.6.8",
     "classnames": "^2.3.2",
+    "delay": "^6.0.0",
     "easymde": "^2.18.0",
     "next": "14.1.4",
     "prisma": "^5.12.1",
@@ -21,6 +22,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-simplemde-editor": "^5.2.0",
     "zod": "^3.22.2"
   },
