--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.4.0",
     "react-markdown": "^9.0.1",
