--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.12.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.0.2",
+    "@sentry/nextjs": "^7.105.0",
     "@tanstack/react-query": "^5.35.1",
     "axios": "^1.6.8",
     "classnames": "^2.3.2",
